# AnimeSnap

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-qt4.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
AnimeSnap/: __main__.py  cli.py  consts.py  files.py  fluent_gui.py  gui.py  json_operations.py  logs.py  search.py
src/: json_operations.py  main.py  search.py
